# Orquix-Backend

./: .gitignore  DEPLOYMENT.md  DEPLOYMENT_INSTRUCTIONS.md  INTERFAZ_README.md  README.md  TASKS.md  TASKS_backup.md  ai_moderator_flow.md  ai_orchestrator_flow.md  alembic.ini  context_builder_flow.md  dev-status.sh  flujo_conjunto_orquix.md  package.json  pyproject.toml  render.yaml  test_caso_cristobal.py  test_continuity_api.py  test_detailed_continuity.py  test_followup.py  test_historial.py  test_output_full.txt  test_simple_continuity.py  test_sistema_real_completo.py
backend/: Dockerfile  README.md  check_projects.py  create_mock_user.py  debug_context_timeout.py  debug_session_issue.py  debug_specific_session.py  fix_archivo.py  pyproject.toml  requirements.txt  start.sh  test_automatic_synthesis_inclusion.py  test_context_builder_flow.py  test_context_builder_refactor.py  test_context_fix.py  test_context_flow_complete.py  test_context_preservation.py  test_context_sidebar_demo.py  test_context_with_synthesis.py  test_crud_chat_session.py  test_endpoints_chat_session.py  test_full_orchestration_integration.py  test_new_session_architecture.py  test_orchestration_flow.py  test_output_completo_20250617_144047.txt  test_output_completo_20250617_234941.txt  test_output_completo_final_20250617_151132.txt  test_schemas_chat_session.py  test_sidebar_fix.py  test_simple_endpoints.py  test_simplified_continuity.py  test_sistema_completo.py  test_sistema_completo_final.py  test_sistema_detallado.py  test_sistema_real_completo.py  test_smart_classify.py
backend/alembic/: env.py
backend/alembic/versions/: 20250529_1340_a9f33085b59a_initial_migration.py  20250530_0824_7dd45a2bd520_update_embedding_dimension.py  20250602_1756_ff1a738ad19f_initial_migration_from_scratch.py  20250617_1200_add_updated_at_field.py  20250617_1200_simple_context_fields.py  20250617_1205_add_deleted_at_field.py  20250619_1727_899885b7c8ec_add_project_id_and_prompt_text_to_ia_.py  20250619_1824_d02f6b22b95a_make_interaction_event_id_nullable_in_.py  20250619_1916_d8b67e63dfb7_create_ia_prompts_table_and_refactor_ia_.py  20250619_1918_20353efa3ba7_create_ia_prompts_and_refactor_ia_.py  20250619_1934_5662ce7d838a_remove_obsolete_columns_from_ia_.py  20250620_1336_642ac8413a65_initial_migration_complete_schema.py  20250620_2012_a40f23b782cb_refactor_interaction_events_to_timeline.py  20250620_2018_ffe4f8b2fa48_refactor_interaction_events_to_timeline_.py
backend/app/: main.py
backend/app/core/: config.py  database.py
backend/app/crud/: chat.py  (+6 more)
backend/tests/: debug_context_flow.py  test_ai_orchestrator.py  test_anthropic_debug.py  test_complete_integration.py  test_context_manager.py  test_embeddings.py  test_followup_interpreter.py  test_force_proceed.py  test_integration.py  test_integration_full_responses.py  test_query_service.py  test_results_integration_complete.md  test_simple.py
(+140 files in other folders)
