[tool.poetry]
name = "orquix-backend"
version = "0.1.0"
description = "Orquix - AI Orchestration Backend"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
sqlmodel = "^0.0.16"
asyncpg = "^0.29.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
pydantic = {extras = ["email"], version = "^2.6.3"}
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
pgvector = "^0.2.5"
alembic = "^1.13.1"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
openai = "^1.12.0"
tiktoken = "^0.6.0"
psycopg2-binary = "^2.9.9"
numpy = "^1.26.0"
tenacity = "^8.2.3"
pyjwt = "^2.10.1"
psutil = "^7.0.0"
anthropic = "^0.52.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.8.0"
ruff = "^0.2.2"
rich = "^14.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"] 